buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
}

plugins {
    id 'java'
    id 'maven-publish'
    alias(libs.plugins.axion.release)
    alias(libs.plugins.nmcp.bundle)
}

scmVersion {
    tag {
        prefix = 'v'
    }
    checks {
        uncommittedChanges = false
        aheadOfRemote = false
        // Disabled due to Gradle 9 + Quarkus configuration resolution issues
        // Quarkus creates special configurations that can't be safely resolved during release verification
        snapshotDependencies = false
    }
}


allprojects {
    group = 'ai.pipestream'
    version = rootProject.scmVersion.version
}

// Repositories for root project (needed for nmcp plugin's internal dependencies)
repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}

nmcpAggregation {
    publishAllProjectsProbablyBreakingProjectIsolation()

    centralPortal {
        username = findProperty('mavenCentralUsername') ?: System.getenv('MAVEN_CENTRAL_USERNAME')
        password = findProperty('mavenCentralPassword') ?: System.getenv('MAVEN_CENTRAL_PASSWORD')
        publishingType = "AUTOMATIC"
        // Explicitly set baseUrl to use Maven Central Portal (not OSS)
        baseUrl = "https://central.sonatype.com/"
    }
}

subprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            name = 'GitHubPackages'
            url = uri('https://maven.pkg.github.com/ai-pipestream/pipestream-platform')
            credentials {
                username = findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                password = findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
            }
        }
    }
    
    // Configure Java projects (excluding BOM and Gradle plugins which have their own publishing)
    if (project.name != 'bom' && project.name != 'quarkus-buf-grpc-generator') {
        apply plugin: 'java'
        
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
            withSourcesJar()
            withJavadocJar()
        }
        
        // Remove JavaDoc links to internal Quarkus classes to prevent build errors
        tasks.withType(Javadoc).configureEach {
            doFirst {
                options.addStringOption('Xdoclint:none', '-quiet')
            }
        }

        // Configure parallel test execution with unique output directories
        // This prevents XML test result write conflicts when maxParallelForks > 1
        tasks.withType(Test).configureEach { testTask ->
            // Enable parallel test execution (use half of available processors for safety)
            testTask.maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
            
            // Configure unique output directories per test worker to avoid file conflicts
            // Each parallel fork writes to its own directory using the worker ID
            testTask.reports {
                junitXml {
                    // Use worker ID to create unique directory per parallel fork
                    // If worker ID is not available (single fork), use default location
                    def workerId = System.getProperty('org.gradle.test.worker')
                    if (workerId) {
                        outputLocation = layout.buildDirectory.dir("test-results/${testTask.name}-worker-${workerId}")
                    } else {
                        outputLocation = layout.buildDirectory.dir("test-results/${testTask.name}")
                    }
                }
            }
            
            // Configure Docker Hub authentication for TestContainers
            // TestContainers will use these environment variables to authenticate with Docker Hub
            // This prevents rate limit errors when pulling images
            def dockerUser = findProperty('dockerUser') ?: System.getenv('DOCKER_USER')
            def dockerToken = findProperty('dockerToken') ?: System.getenv('DOCKER_TOKEN')
            
            if (dockerUser && dockerToken) {
                testTask.environment('DOCKER_USERNAME', dockerUser)
                testTask.environment('DOCKER_PASSWORD', dockerToken)
            }
        }

        publishing {
            repositories {
                mavenLocal()
                // GitHub Packages
                maven {
                    name = 'GitHubPackages'
                    url = uri('https://maven.pkg.github.com/ai-pipestream/pipestream-platform')
                    credentials {
                        username = findProperty('gpr.user') ?: System.getenv('GITHUB_ACTOR')
                        password = findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
                    }
                }
            }
            
            publications {
                create('maven', MavenPublication) {
                    from components.java
                    
                    pom {
                        name = project.name
                        description = project.description ?: "Pipestream Platform Component"
                        url = 'https://pipestream.ai'
                        licenses {
                            license {
                                name = 'MIT License'
                                url = 'https://opensource.org/licenses/MIT'
                            }
                        }
                        developers {
                            developer {
                                id = 'krickert'
                                name = 'Kristian Rickert'
                            }
                        }
                        scm {
                            connection = 'scm:git:https://github.com/ai-pipestream/pipestream-platform.git'
                            developerConnection = 'scm:git:ssh://git@github.com/ai-pipestream/pipestream-platform.git'
                            url = 'https://github.com/ai-pipestream/pipestream-platform'
                        }
                    }
                }
            }
        }
    }

    signing {
        def signingKey = System.getenv("GPG_PRIVATE_KEY")
        def signingPassword = System.getenv("GPG_PASSPHRASE")
        
        // Only sign if keys are present (e.g. CI/Release)
        required { signingKey != null }
        
        if (signingKey && signingPassword) {
            useInMemoryPgpKeys(signingKey, signingPassword)
            sign publishing.publications
        }
    }
}
